Mejora explicación cálculo potencia y energia

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,5 +1,3 @@
-% This file was created with JabRef 2.10b2.
-% Encoding: UTF8
 @article{Ross2003,
   title =	 {Peirce's criterion for the elimination of suspect
                   experimental data},
@@ -11820,65 +11818,12 @@ Author = {BOE},
   Url                      = {http://www.boe.es/boe/dias/2000/09/30/pdfs/A33511-33515.pdf}
 }
 
-@comment{jabref-meta: groupsversion:3;}
-
-@comment{jabref-meta: groupstree:
-0 AllEntriesGroup:;
-1 ExplicitGroup:Partial Discharges\;2\;Boggs.Pathak.ea1996\;Coenen.Ten
-bohlen.ea2007\;Coenen.Tenbohlen.ea2008\;Gulski.Kreuger1992\;Gulski1991
-\;Hashmi.Lehtonen.ea2010\;IEEE2007\;Judd.Farish.ea1996\;Judd.Farish199
-9\;Judd.Hampton.ea1996\;Judd.Yang.ea2005\;Judd.Yang.ea2005a\;Judd2007\
-;Krivda.Gulski.ea1995\;Krivda1995\;Lundgaard1992\;Lundgaard1992a\;Mark
-alous.Strehl.ea2007\;Markalous.Tenbohlen.ea2008\;Orr.Reid.ea2007\;Ouss
-alah.Zebboudj.ea2007\;Pearson.Farish.ea1995\;Sanchez-Uran.F..ea2011\;S
-arathi.Reid.ea2008\;Satish.Zaengl1995\;Tenbohlen.Denissov.ea2008\;;
-2 ExplicitGroup:UFH\;0\;Brown1996\;Coenen.Tenbohlen.ea2007\;Coenen.Ten
-bohlen.ea2008\;Feger.Feser.ea2000\;Gulski.Strehl.ea2009\;Judd.Farish.e
-a1996\;Judd.Farish.ea2000\;Judd.Farish1999\;Judd.Hampton.ea1996\;Judd.
-Yang.ea2005\;Judd.Yang.ea2005a\;Judd2007\;Markalous.Strehl.ea2007\;Mar
-kalous.Tenbohlen.ea2008\;Orr.Reid.ea2007\;Pearson.Farish.ea1995\;Sarat
-hi.Reid.ea2008\;Sarathi.Umamaheswari2010\;Tenbohlen.Denissov.ea2008\;;
-2 ExplicitGroup:Cable\;0\;Boggs.Pathak.ea1996\;Gulski.Kreuger1992\;Gul
-ski1991\;Hashmi.Lehtonen.ea2010\;Krivda1995\;Lemke2008\;Oussalah.Zebbo
-udj.ea2007\;;
-2 ExplicitGroup:Damped sinusoids\;0\;Agrez2009\;Girgis.Ham1980\;Goodwi
-n1997\;Hauer.Demeure.ea1990\;Kumaresan.Tufts.ea1984\;Kumaresan.Tufts19
-82\;Lovisolo.Silva.ea2005\;Santamaria.Pantaleon.ea2000\;Zhang.Swain.ea
-2008\;;
-1 ExplicitGroup:wavelets\;2\;;
-2 ExplicitGroup:teoría\;0\;Cornish.Bretherton.ea2006\;Nason.Sachs1999\
-;Nason.Sapatinas2002\;Serroukh.Walden2000a\;Torrence.Compo1998\;Whitch
-er.Byers.ea2002\;Whitcher.Guttorp.ea2000\;Whitcher.Schwarz.ea2005\;;
-2 ExplicitGroup:aplicaciones\;0\;Domingues.Mendes.ea2005\;Labat2005\;L
-au.Weng1995\;Markalous.Strehl.ea2007\;Markalous.Tenbohlen.ea2008\;Oh.A
-mmann.ea2003\;Yao.Song.ea2000\;;
-2 ExplicitGroup:solar\;0\;Kawasaki.Oozeki.ea2006\;Mellit.Benghanem.ea2
-006\;Mellit.Kalogirou.ea2008\;Woyte.Belmans.ea2007\;Woyte.Thong.ea2003
-\;;
-1 ExplicitGroup:Solar\;0\;Angstrom1929\;Angstrom1930\;Badescu.Gueymard
-.ea2012\;Bilton.Wiesman.ea2011\;Braun.Stetz.ea2011\;Collado2009\;Diaz-
-Dorado.Suarez-Garcia.ea2011\;Ding.Radhakrishnan2008\;Espinar.Ramirez.e
-a2009\;Garcia.Marroyo.ea2011\;Gaston-Romeo.Leon.ea2011\;Glasbey.Graham
-.ea2001\;Grena2012\;Gueymard.Jindra.ea1995\;Gueymard.Kambezidis2004\;G
-ueymard.Wilcox2011a\;Gueymard1995\;Gueymard2001\;Gueymard2004\;Gueymar
-d2004a\;Gueymard2004b\;Gueymard2008\;Gueymard2008a\;Gueymard2009\;Guey
-mard2011\;Gueymard2012\;Hinkelman2013\;Hoff.Perez2011\;Jain.Kapoor2004
-\;Journee.Bertrand2010\;Journee.Bertrand2011\;Kambezidis1997\;Leloux.N
-arvarte.ea2012\;Leloux.Narvarte.ea2012a\;Lloyd.Forest2010\;Lopez.Gueym
-ard2007\;Lorenzo.Narvarte.ea2011\;Martinez-Moreno.Munoz.ea2010\;Meza.V
-aras2000\;Michalsky1988\;Munoz.Martinez-Moreno.ea2011\;Nguyen.Pearce20
-12\;Perpinan.Marcos.ea2013\;Posselt.Mueller.ea2012\;Schulte.Davison.ea
-2012\;Simon.Meyer2010\;Steland.Herrmann2010\;Tapakis.Charalambides2012
-\;Thevenard.Pelland2011\;Ummel2011\;Widen.Waeckelgaard.ea2010\;Wilkins
-on1981\;;
-2 ExplicitGroup:Prediccion\;0\;Aznarte.Girard.ea2009\;Cao.Cao2006\;Cho
-w.Urquhart.ea2011\;Diagne.David.ea2012\;Girard.Laquaine.ea2012\;Hammer
-.Heinemann.ea1999\;Inman.Pedro.ea2013\;Lonij.Brooks.ea2013\;Lorenz.Hur
-ka.ea2009\;Lorenz.Remund.ea2009\;Marquez.Coimbra2011\;Marquez.Coimbra2
-012\;Mellit.Benghanem.ea2005a\;Mellit.Benghanem.ea2006\;Rincon.Jorba.e
-a2011\;Torres.Garcia.ea2005\;Yang.Jirutitijaroen.ea2012\;Zamora.Dutton
-.ea2005\;;
-1 ExplicitGroup:por Leer\;0\;Evans.Strezov.ea2012\;Grena2012\;Havre.He
-tzler.ea2002\;;
+@techreport{Nordmann2014,
+author = {Nordmann, Th and Clavadetscher, Luzi and van Sark, Wilfried G.J.H.M. and Green, Mike},
+institution = {IEA-PVPS},
+keywords = {performance},
+mendeley-tags = {performance},
+title = {{Analysis of Long-Term Performance of PV Systems}},
+url = {https://iea-pvps.org/key-topics/analysis-of-long-term-performance-of-pv-systems-2015-2/},
+year = {2014}
 }
-
